# Associative-Python-App

./: .gitignore  poetry.toml  pyproject.toml  requirements.txt  schema.gql
src/: app.py  config.json
src/database/: arrayfield.py  models.py  payload.py  resolvers.py
